fix text overlap issue

--- a/assets/section-pdp.css
+++ b/assets/section-pdp.css
@@ -7,11 +7,13 @@
     text-decoration: italic;
     font-style: italic;
 }
-.variation-type-set.set-of-2, .variation-type-set.set-of-3 {
-    margin-top: 1rem;
+
+.inlcudes-on-set.unseen {
+    display: none;
 }
+
 .pdp__form-labels .inlcudes-on-set {
-    margin-top: -52px;
+    margin-top: -20px;
 }
 @media screen and (max-width:900px){
 .pdp__form-labels .inlcudes-on-set {
@@ -20,6 +22,10 @@
 }
 .pdp__form-labels .inlcudes-on-set.seen {
     margin-bottom: 20px;
+}
+
+.pdp__form-labels .inlcudes-on-set p {
+    margin-bottom: 0;
 }
 
 .pdp__form-labels .inlcudes-on-set.unseen {
@@ -63,6 +69,10 @@
 
 .pdp__variant-buttons {
     margin-bottom: 12px;
+}
+
+[data-handle="clear-luggage-cover"] .pdp__variant-buttons {
+    margin-bottom: 0;
 }
 
 .pdp__variant-buttons[data-count="1"] {
@@ -274,7 +284,7 @@
       transform: translateY(0);
     }
 }
-  
+
 .pdp__description-review {
     animation: fadeUp 0.2s ease-in-out;
     opacity: 0;
@@ -291,7 +301,7 @@
       transform: translateY(0);
     }
 }
-  
+
 .pdp__description-review {
     animation: fadeUp 0.2s ease-in-out;
     opacity: 0;
